--- a/StockManagementSystem/Views/Report/StockListReport.cshtml
+++ b/StockManagementSystem/Views/Report/StockListReport.cshtml
@@ -23,11 +23,14 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ProductName)
-                </td>
-            </tr>
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+        </tr>
         }
     </tbody>
 </table>
